fixed overflow issue on smaller screens

--- a/static/graphics.css
+++ b/static/graphics.css
@@ -33,6 +33,7 @@ body {
   align-items: flex-start;
   padding-top: 3rem;
   width: 100%;
+  padding-bottom: 100px;
 }
 
 .links__list {
